client/assets/less/custom/map.less
#map {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;

  .mapboxgl-ctrl-group {
    @media @sm-and-down {
      display: none !important;
    }

    .mapboxgl-ctrl-compass {
      display: none !important;
    }
  }

  .mapboxgl-ctrl-top-right {
    right: auto;
    left: 8px;
    top: 58px;
    z-index: 2;

    @media @md-and-up {
      right: 12px;
      left: auto;
      top: 80px;
    }
  }
}
/* ... */

